--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+@font-face {
+	font-family: 'Inter-SemiBold';
+	src: url('fonts/Inter-SemiBold.woff') format('woff');
+	font-weight: 600;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Inter-Bold';
+	src: url('fonts/Inter-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
 body {
-    background-image: background;
+    background-image: url("img/background-image.jpg");
 }
