--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,33 @@
 	font-weight: 700;
 	font-style: normal;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+    font-size: 35px;
+}
+
+h1 {
+    color: white;
+}
+
+.search {
+	background-color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 body {
     background: url(/img/background.jpg);
     background-size: cover;
-
 }
