--- a/css/main.css
+++ b/css/main.css
@@ -11,30 +11,6 @@
 	font-style: normal;
 }
 
-a {
-    text-decoration: none;
-    color: white;
-    font-size: 35px;
-}
-
-h1 {
-    color: white;
-}
-
-.search {
-	background-color: black;
-}
-
-
-
-
-
-
-
-
-
-
-
 
 body {
     background-image: url(/img/background.jpg);
@@ -43,6 +19,52 @@ body {
     background-repeat: no-repeat;
     color: white;
 }
+
+a {
+    text-decoration: none;
+    color: white;
+    font-size: 35px;
+    text-shadow: 0 4px 25px black;
+}
+
+h1 {
+    color: white;
+    text-shadow: 0 4px 25px black;
+}
+
+.search {
+    width: 45px;  
+    height: 45px;
+    border: 1px solid black;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black;
+}
+
+.sky {
+    width: 45px;  
+    height: 45px;
+    border: 1px solid #D9D9D9;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #D9D9D9;
+}
+
+.profile {
+	background-color: black;
+	border: 5px solid black;
+	border-radius: 50px;
+	padding-right: 25px;
+}
+
+.loupe {
+    margin-left: 190px;
+}
+
 .ftext {
     font-size: 65px;
     font-weight: bold;
