--- a/css/main.css
+++ b/css/main.css
@@ -25,17 +25,6 @@ h1 {
 	background-color: black;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 body {
     background-image: url(/img/background.jpg);
     background-size: cover;
@@ -57,9 +46,34 @@ body {
 .button {
     font-size: 30px;
     background-color: #EB5757;
-    border-radius: 20px;
+    border-radius: 34px;
     text-align: center;
-    padding: 5px;
+    padding: 10px;
+    width: 213px;
     margin-top: 30px;
     font-weight: 700;
+}
+/* Плашки */
+.blank {
+    width: 1000px;
+    margin-left: 45%;
+    margin-right: 5%;
+}
+.information{
+    background-color: #CDAEBA;
+    border-radius: 40px 40px 0 0;
+    text-align: center;
+    background: rgba(205, 174, 186, 0.8);
+    padding: 10px;
+}
+.head {
+    color: black;
+    font-weight: 700;
+    font-size: 30px;
+}
+.text {
+    color: black;
+    font-size: 20px;
+    font-family: 'Inter-SemiBold', sans-serif;
+    font-weight: 600;
 }
