--- a/css/main.css
+++ b/css/main.css
@@ -44,14 +44,13 @@ h1 {
 }
 
 .sky {
-    width: 45px;  
-    height: 45px;
+    width: 50px;  
+    height: 50px;
+    padding-top: 10px;
     border: 1px solid #D9D9D9;
     border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background: #D9D9D9;
+    margin-left: 100px; ;
 }
 
 .profile {
