--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 
 
 body {
-    background-image: url(/img/background.jpg);
+    background-image: url(../img/background.jpg);
     background-size: cover;
     font-family: 'Inter-Bold', sans-serif;
     background-repeat: no-repeat;
